# turkish-lm-tuner

./: .gitignore  404.html  BuildREADME.md  LICENSE  README.md  compute_lengths.sh  env.yml  finetune-no_gpu.sh  finetune.sh  index.html  license.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run.sh  sitemap.xml  srun.sh
.github/workflows/: doc.yml  publish.yml
conf/: class_ttc4900.yaml  debug.yaml  default.yaml  ner.yaml  ner_milliyet.yaml  ner_wikiann.yaml  nli.yaml  nli_multinli_tr.yaml  nli_snli_tr.yaml  nli_tr.yaml  paraphrasing.yaml  paraphrasing.yml  pos_boun.yaml  pos_imst.yaml  qa_exams.yaml  qa_mkqa.yaml  qa_tquad.yaml  qa_turkish-nlp-qa-dataset.yaml  qg_exams.yaml  qg_mkqa.yaml  qg_tquad.yaml  qg_turkish-nlp-qa-dataset.yaml  semantic_similarity.yaml  summarization.yaml  title_generation.yaml  title_generation.yml
configs/: summarization.yaml
docs/: index.md  license.md
docs/tutorials/: evaluation.ipynb  finetuning.ipynb  getting-started.ipynb  inference.ipynb
experiments/: README.md  compile_results.py  compute_lengths.py  eval.py  finetune.py  ner_classification.py  ner_classification_base.py  push_to_hub.py
experiments/conf/: class_prod_reviews.yaml  class_ttc4900.yaml  class_tweet_sentiment.yaml  debug.yaml  default.yaml  default_classification.yaml  default_cond_gen.yaml  ner_milliyet.yaml  ner_milliyet_token.yaml  ner_wikiann.yaml  ner_wikiann_token.yaml  nli_multinli_tr.yaml  nli_snli_tr.yaml  nli_tr.yaml  paraphrasing.yaml  pos_boun.yaml  pos_boun_token.yaml  pos_imst.yaml  pos_imst_token.yaml  qa_exams.yaml  qa_mkqa.yaml  qa_tquad.yaml  qa_tquad_class.yaml  qa_turkish-nlp-qa-dataset.yaml  qg_exams.yaml  qg_mkqa.yaml  qg_tquad.yaml  qg_turkish-nlp-qa-dataset.yaml  semantic_similarity.yaml  summarization.yaml  title_generation.yaml
experiments/generation_conf/: class_prod_reviews.yaml  class_ttc4900.yaml  ner_milliyet.yaml  ner_wikiann.yaml  nli_snli_tr.yaml  nli_tr.yaml  paraphrasing.yaml  pos_boun.yaml  pos_imst.yaml  qa_exams.yaml  qa_mkqa.yaml  qa_tquad.yaml  qg_exams.yaml  qg_mkqa.yaml  qg_tquad.yaml  semantic_similarity.yaml  summarization.yaml  title_generation.yaml
experiments/scripts/: compute_lengths.sh  evaluate.sh  finetune.sh
generation_conf/: default.yaml  nli_snli_tr.yaml  semantic_similarity.yaml  summarization.yaml
search/: search_index.json
src/: compute_lengths.py  dataset.py  dataset_processor.py  eval.py  finetune.py  metrics.py  test.py  tr_datasets.py  train.py  trainer.py  utils.py
turkish_lm_tuner/: __init__.py  dataset_processor.py  evaluator.py  metrics.py  predictor.py  t5_classifier.py  tr_datasets.py  trainer.py
tutorials/: evaluation.html  finetuning.html  getting-started.html  inference.html
